# code-size-bench

./: README.md  run.sh
async-block-on/: Cargo.toml
async-block-on/.cargo/: config
async-block-on/src/: block_on.rs  main.rs
async-embassy/: Cargo.toml
async-embassy/src/: main.rs
drogue-device/: Cargo.toml
drogue-device/.cargo/: config
drogue-device/src/: device.rs  main.rs
hal-blocking/: Cargo.toml
hal-blocking/src/: main.rs
