[workspace]
resolver = "2"

[package]
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2018"
name = "echo"
version = "0.1.0"

[dependencies]
embassy = { version = "0.1.0" }
embassy-traits = { version = "0.1.0" }
embassy-nrf = { version = "0.1.0",  features = ["52840"] }

cortex-m = { version = "0.7.2", features = ["inline-asm"] }
cortex-m-rt = "0.6.13"
embedded-hal = "0.2.4" 
panic-halt = "0.1.0"
nrf52840-hal = "0.12.1" 
futures = { version = "0.3.8", default-features = false, features = ["async-await"] }

[patch.crates-io]
embassy = { git = "https://github.com/akiles/embassy" }
embassy-nrf = { git = "https://github.com/akiles/embassy" }
embassy-macros = { git = "https://github.com/akiles/embassy" }
embassy-traits = { git = "https://github.com/akiles/embassy" }

[profile.dev]
debug = 2
debug-assertions = true
incremental = false
opt-level = 'z'
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
