[package]
authors = ["Ulf Lilleengen <ulf.lilleengen@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "echo"
version = "0.1.0"
resolver = "2"

[dependencies]
embassy = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }
embassy-traits = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }
embassy-hal-common = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }
embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "nrf52840",
] }
cortex-m = { version = "0.7.3", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-halt = "0.2.0"
nrf52840-hal = "0.14.0"
drogue-device = { version = "0.1.0", default-features = false }

[patch.crates-io]
embassy = { git = "https://github.com/embassy-rs/embassy" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy" }
embassy-hal-common = { git = "https://github.com/embassy-rs/embassy" }
embassy-macros = { git = "https://github.com/embassy-rs/embassy" }
embassy-traits = { git = "https://github.com/embassy-rs/embassy" }
drogue-device = { git = "https://github.com/drogue-iot/drogue-device", rev = "ef1ea2fad7437760b7c00b81aa1ef9615c06aafc" }

[profile.dev]
debug = 2
debug-assertions = true
incremental = false
opt-level = 'z'
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
